--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,21 @@
 {
-  "extends": "next/core-web-vitals"
+  "env": {
+    "es2021": true,
+    "node": true,
+    "browser": true
+  },
+  "plugins": ["prettier"],
+  "rules": {
+    "react-hooks/exhaustive-deps": "off"
+    // Turns off the rule entirely
+  },
+  "extends": [
+    "next/core-web-vitals",
+    "eslint:recommended",
+    "plugin:prettier/recommended"
+  ],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  }
 }
