--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,12 @@
 {
-  "trailingComma": "es5",
   "semi": true,
-  "tabWidth": 2,
-  "singleQuote": true,
-  "jsxSingleQuote": true,
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "tabWidth": 4,
+  "useTabs": false,
+  "singleQuote": false,
+  "jsxSingleQuote": false,
+  "arrowParens": "always",
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "trailingComma": "es5",
+  "proseWrap": "always"
 }
